[gd_scene load_steps=31 format=3 uid="uid://cxsvrcy3ee2h0"]

[ext_resource type="Script" path="res://menus/runtime/playground/code/test_area_13_2.gd" id="1_ktinv"]
[ext_resource type="Texture2D" uid="uid://dt442iq0lmmlh" path="res://assets/backgrounds/bg-test-area.png" id="2_r01wm"]
[ext_resource type="Script" path="res://menus/runtime/playground/code/pointer_thing.gd" id="5_4cor7"]
[ext_resource type="Texture2D" uid="uid://6geiny7chbe" path="res://assets/interface/rabbitstar-03.png" id="5_a4xu5"]
[ext_resource type="Texture2D" uid="uid://cnvhaimk3bdnc" path="res://assets/interface/rabbitstar.png" id="5_f2m2o"]
[ext_resource type="Texture2D" uid="uid://u6aiydp2dtlm" path="res://assets/interface/path84.png" id="6_vanml"]
[ext_resource type="Script" path="res://menus/runtime/playground/code/anim_pointer_thing.gd" id="8_eq4xi"]
[ext_resource type="PackedScene" uid="uid://cv6l00hfmbo00" path="res://objects/objects/obj_anim_launcher.tscn" id="9_gla2u"]
[ext_resource type="PackedScene" uid="uid://d0w6k4f8fpi0r" path="res://objects/objects/obj_bumper_2x2.tscn" id="13_w0x4d"]
[ext_resource type="PackedScene" uid="uid://dupwcjoc87acb" path="res://objects/objects/obj_bumper_15x15.tscn" id="15_0gmrd"]
[ext_resource type="PackedScene" uid="uid://bh7q842qhtwqs" path="res://objects/objects/obj_door_1x2.tscn" id="16_lcyh4"]
[ext_resource type="PackedScene" uid="uid://brt0stkwe1vwx" path="res://objects/objects/obj_switch.tscn" id="18_q8nc6"]
[ext_resource type="Script" path="res://menus/runtime/playground/code/flipper_scissor.gd" id="20_afoxu"]
[ext_resource type="Texture2D" uid="uid://dnc74s43lb64n" path="res://assets/objects/flipper-rotator-scissor-3x3.png" id="21_kokl8"]
[ext_resource type="PackedScene" uid="uid://bc842wyjmfqj1" path="res://objects/objects/obj_rabbithole.tscn" id="22_0qdv5"]
[ext_resource type="PackedScene" uid="uid://bpfxxr2q570kr" path="res://objects/objects/flipper_rotator_4x1.tscn" id="22_fmxv3"]
[ext_resource type="Texture2D" uid="uid://c4pilrllakm06" path="res://assets/objects/bunnyball-idle-01.png" id="22_jfvuj"]
[ext_resource type="Script" path="res://menus/runtime/playground/code/anim_scissor.gd" id="22_l3xbp"]
[ext_resource type="Texture2D" uid="uid://dikbjh6owfqj6" path="res://assets/objects/rabbitball-idle-01-r0.png" id="23_2k42s"]
[ext_resource type="Texture2D" uid="uid://b6k3vg1ym14og" path="res://assets/objects/flipper-rotator-scissor-2x2.png" id="23_80r6f"]
[ext_resource type="Texture2D" uid="uid://fjawh1frdy6m" path="res://assets/objects/wolfball-happy-01.png" id="24_xxk03"]
[ext_resource type="Texture2D" uid="uid://duirdcrwk6um0" path="res://assets/objects/bunnyball-chibi.png" id="25_frkj7"]
[ext_resource type="Texture2D" uid="uid://d2p31jtu10xsn" path="res://assets/objects/rabbitball-chibi.png" id="26_i8oar"]
[ext_resource type="Texture2D" uid="uid://dud7jysgoyvjl" path="res://assets/objects/wolfball-chibi.png" id="27_onn2v"]
[ext_resource type="Texture2D" uid="uid://bngnaahx8oyn2" path="res://assets/objects/flipper-regular-right.png" id="31_gnhrw"]
[ext_resource type="Texture2D" uid="uid://ddgv8xfqbr1gr" path="res://assets/objects/flipper-regular-left.png" id="32_fupfp"]

[sub_resource type="Animation" id="Animation_50y0u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1oohv"]
resource_name = "hold"
length = 0.167
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0166667, 0.0666667, 0.116667, 0.166667),
"transitions": PackedFloat32Array(1.5, 1.5, 1.5, 1.5),
"update": 0,
"values": [0.1309, -0.0436332, 0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_spebq"]
resource_name = "rest"
length = 0.267
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3.57628e-07, 0.0333333, 0.133333, 0.166667, 0.2, 0.233333, 0.2667),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [0.0, 0.139626, 0.0, 0.0698132, 0.0, 0.0349066, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6yyfo"]
_data = {
"RESET": SubResource("Animation_50y0u"),
"hold": SubResource("Animation_1oohv"),
"rest": SubResource("Animation_spebq")
}

[node name="TA" type="Node2D"]
script = ExtResource("1_ktinv")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(450, 360)
zoom = Vector2(1.2, 1.2)

[node name="BG" type="Sprite2D" parent="."]
self_modulate = Color(0.8, 0.75, 0.75, 1)
show_behind_parent = true
z_index = -10
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_r01wm")
centered = false
metadata/_edit_lock_ = true

[node name="PointerThing" type="Node2D" parent="."]
position = Vector2(634, 321)
script = ExtResource("5_4cor7")

[node name="StarGhost" type="Sprite2D" parent="PointerThing"]
self_modulate = Color(1, 1, 1, 0)
rotation = 0.785398
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_vanml")
metadata/_edit_lock_ = true

[node name="StarCanvas" type="Sprite2D" parent="PointerThing"]
modulate = Color(0, 0, 0, 0.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_a4xu5")
metadata/_edit_lock_ = true

[node name="StarCanvas2" type="Sprite2D" parent="PointerThing/StarCanvas"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_a4xu5")
metadata/_edit_lock_ = true

[node name="StarP" type="Node2D" parent="PointerThing"]
metadata/_edit_lock_ = true

[node name="Star" type="Sprite2D" parent="PointerThing/StarP"]
z_index = 1
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("5_a4xu5")
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="PointerThing"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 72.0
script = ExtResource("8_eq4xi")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="PointerThing3" type="Node2D" parent="."]
position = Vector2(502, 321)
script = ExtResource("5_4cor7")

[node name="StarGhost" type="Sprite2D" parent="PointerThing3"]
self_modulate = Color(1, 1, 1, 0)
rotation = 0.785398
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_vanml")
metadata/_edit_lock_ = true

[node name="StarCanvas" type="Sprite2D" parent="PointerThing3"]
modulate = Color(0, 0, 0, 0.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_f2m2o")
metadata/_edit_lock_ = true

[node name="StarCanvas2" type="Sprite2D" parent="PointerThing3/StarCanvas"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_f2m2o")
metadata/_edit_lock_ = true

[node name="StarP" type="Node2D" parent="PointerThing3"]
metadata/_edit_lock_ = true

[node name="Star" type="Sprite2D" parent="PointerThing3/StarP"]
z_index = 1
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("5_f2m2o")
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="PointerThing3"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 72.0
script = ExtResource("8_eq4xi")
metadata/_edit_lock_ = true

[node name="Launcher" parent="." instance=ExtResource("9_gla2u")]
position = Vector2(401, 425)
scale = Vector2(1.5, 1.5)

[node name="Bumper" parent="." instance=ExtResource("13_w0x4d")]
position = Vector2(275, 328)

[node name="Bumper2" parent="." instance=ExtResource("15_0gmrd")]
position = Vector2(371, 328)

[node name="Door" parent="." instance=ExtResource("16_lcyh4")]
position = Vector2(184, 414)
is_DoorSwitch_type = 1

[node name="Door2" parent="." instance=ExtResource("16_lcyh4")]
position = Vector2(257, 414)

[node name="Switch" parent="." instance=ExtResource("18_q8nc6")]
position = Vector2(352, 510)

[node name="FlipperScissor" type="Node2D" parent="."]
position = Vector2(567, 449)
script = ExtResource("20_afoxu")

[node name="Sprite2D" type="Sprite2D" parent="FlipperScissor"]
self_modulate = Color(1, 0.75, 1, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("21_kokl8")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="FlipperScissor"]
libraries = {
"": SubResource("AnimationLibrary_6yyfo")
}

[node name="Button" type="Button" parent="FlipperScissor"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 96.0
script = ExtResource("22_l3xbp")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="FlipperScissor2" type="Node2D" parent="."]
position = Vector2(699, 449)
script = ExtResource("20_afoxu")

[node name="Sprite2D" type="Sprite2D" parent="FlipperScissor2"]
self_modulate = Color(1, 0.5, 0.5, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("23_80r6f")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="FlipperScissor2"]
libraries = {
"": SubResource("AnimationLibrary_6yyfo")
}

[node name="Button" type="Button" parent="FlipperScissor2"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 96.0
script = ExtResource("22_l3xbp")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="FlipperRotator" parent="." instance=ExtResource("22_fmxv3")]
position = Vector2(544, 590)
rotation = 0.139626
rotate_degrees_to = -16.0
flipper_speed = 0.075

[node name="FlipperRotator2" parent="." instance=ExtResource("22_fmxv3")]
position = Vector2(352, 590)
rotation = 0.139626
rotate_degrees_to = -16.0
is_flipper = 1
flipper_speed = 0.075

[node name="Rabbithole" parent="." instance=ExtResource("22_0qdv5")]
position = Vector2(469, 234)
going = 0

[node name="Rabbithole2" parent="." instance=ExtResource("22_0qdv5")]
position = Vector2(541, 234)
going = 1

[node name="Characters" type="Node2D" parent="."]
position = Vector2(-305, 51)

[node name="bigbois1" type="Sprite2D" parent="Characters"]
position = Vector2(560.5, 112.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("22_jfvuj")

[node name="bigbois2" type="Sprite2D" parent="Characters"]
position = Vector2(644.5, 100.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("23_2k42s")

[node name="bigbois3" type="Sprite2D" parent="Characters"]
position = Vector2(728.5, 110.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("24_xxk03")

[node name="Chibis" type="Sprite2D" parent="Characters"]
position = Vector2(556.75, 185)
scale = Vector2(0.5, 0.5)
texture = ExtResource("25_frkj7")

[node name="Chibis2" type="Sprite2D" parent="Characters"]
position = Vector2(628.75, 179)
scale = Vector2(0.5, 0.5)
texture = ExtResource("26_i8oar")

[node name="Chibis3" type="Sprite2D" parent="Characters"]
position = Vector2(700.75, 181)
scale = Vector2(0.5, 0.5)
texture = ExtResource("27_onn2v")

[node name="Flipper-regular-left" type="Sprite2D" parent="."]
visible = false
position = Vector2(224.5, 486.75)
scale = Vector2(0.5, 0.5)
texture = ExtResource("32_fupfp")

[node name="Flipper-regular-right" type="Sprite2D" parent="."]
visible = false
position = Vector2(347, 487)
scale = Vector2(0.5, 0.5)
texture = ExtResource("31_gnhrw")
